# acidbrot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: .mandelbrot.fsh.swp  color_conv.fsh  color_conv_mrt.fsh  colorizer.fsh  despeckle.fsh  dp.fsh  edges.fsh  fir.fsh  fir_abs.fsh  generic2d.vsh  generic2d_64.vsh  halo.fsh  haloMask.fsh  iter.fsh  julia64.fsh  mandelbrot.fsh  mandelbrot32.fsh  mandelbrot64.fsh  noise_displacement.fsh  passthrough.fsh
src/: acidbrot.cc  acidbrot_app.cc  acidbrot_app.hh  filter_mask.cc  filter_mask.hh  glfw_app.cc  glfw_app.hh  glfw_wrapper.cc  glfw_wrapper.hh  video_encoder.cc  video_encoder.hh
src/gl/: color.hh  font.cc  font.hh  framebuffer.cc  framebuffer.hh  gl.cc  gl.hh  primitives.cc  primitives.hh  shader.cc  shader.hh  texture.cc  texture.hh  texture3d.cc  texture3d.hh  utils.cc  utils.hh
src/glad/: glad.c  glad.h
src/utils/: param_dict.cc  param_dict.hh  savepng.cc  savepng.hh
utils/: gen_3d_noise.py  gen_fractal_cmap.py
